<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

<!-- ADMIN -->

    <!-- to scroll in case description is long -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:text="@string/Title"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Author"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Book"
            android:backgroundTint="@color/brown"
            android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>