<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- ADMINS -->

    <!-- to scroll in case description is long -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookTitleUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/bookAuthorUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Author"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/bookDescriptionUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Description"
                android:textSize="20sp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/requestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Request Book"
                android:backgroundTint="@color/brown"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>