<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

<!-- ADMIN -->

    <!-- Scrollview in case -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/details"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:textColor="@color/black"/>

            <!-- First Name setting -->
            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/first"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <!-- Last Name setting -->
            <TextView
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/last"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <Button
                android:id="@+id/confirmMembers"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/green"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>