<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

<!-- ADMIN -->

    <!-- to scroll in case description is long -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:orientation="vertical">

            <!-- Editing -->
            <TextView
                android:id="@+id/bookTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/titleEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <TextView
                android:id="@+id/bookAuthorEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/author"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/authorEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <TextView
                android:id="@+id/bookDescEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Description"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/descEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/brown"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>