<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

<!-- USER -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- Header -->
        <TextView
            android:id="@+id/settingHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/details"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:textColor="@color/black"/>

<!--    &lt;!&ndash; Username setting &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/usernameText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:text="Username:"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"-->
<!--            android:paddingStart="16dp"-->
<!--            android:textColor="@color/black"/>-->

<!--        <EditText-->
<!--            android:id="@+id/userNameSet"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:inputType="textPersonName"-->
<!--            android:padding="8dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHighlight="@color/cardview_dark_background"-->
<!--            android:background="@drawable/edittext_border"/>-->

    <!-- First Name setting -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/first"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:background="@drawable/edittext_border"/>

    <!-- Last Name setting -->
        <TextView
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/last"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:background="@drawable/edittext_border"/>

    <!-- Email setting -->
        <TextView
            android:id="@+id/emailTextSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="Email:"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/emailSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:background="@drawable/edittext_border"/>

    <!-- Contact setting -->
        <TextView
            android:id="@+id/contactText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="Contact:"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:textColor="@color/black"/>

    <EditText
        android:id="@+id/contactSet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:background="@drawable/edittext_border"/>

    <!-- Confirm Changes Button -->
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/green"/>

    <!-- Header -->
    <TextView
        android:id="@+id/settingHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/preference"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:textColor="@color/black"/>

    <!-- helps the push notifications look better -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Notification Preference -->
        <!-- Setting the width to 0dp will allow the constraints to leave space accordingly-->
        <TextView
            android:id="@+id/pushNotifLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notif"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="1dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pushNotif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/pushNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/pushNotifLabel"
            app:layout_constraintBottom_toBottomOf="@id/pushNotifLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>