<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- ADMIN -->

    <!-- to scroll in case description is long -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:orientation="vertical">

            <!-- Editing -->
            <TextView
                android:id="@+id/firstNameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/first"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <TextView
                android:id="@+id/lastNameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/last"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <TextView
                android:id="@+id/emailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="Email:"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/emailAddText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/edittext_border"/>

            <Button
                android:id="@+id/addMemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/brown"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>